--- a/Quickstart/app/Templates/heroes.component.html
+++ b/Quickstart/app/Templates/heroes.component.html
@@ -1,8 +1,16 @@
 <h2>My Heroes</h2>
 <ul class="heroes">
-    <li *ngFor="#hero of heroes" (click)="onSelect(hero)" [class.selected]="hero === selectedHero">
+    <li *ngFor="#hero of heroes" 
+        (click)="onSelect(hero)" 
+        [class.selected]="hero === selectedHero">
         <span class="badge">{{hero.id}}</span> {{hero.name}}
     </li>
 </ul>
 
-<my-hero-detail [hero]="selectedHero"></my-hero-detail>
+<!-- Peek Detail Template -->
+<div *ngIf="selectedHero">
+  <h2>
+    {{selectedHero.name | uppercase}} is my hero
+  </h2>
+  <button (click)="gotoDetail()">View Details</button>
+</div>
