Added 'rate' to the mock data, and created a custom pipe

--- a/Quickstart/app/Templates/hero-detail.component.html
+++ b/Quickstart/app/Templates/hero-detail.component.html
@@ -1,10 +1,13 @@
 <div *ngIf="hero">
     <h2>{{hero.name}} details!</h2>
     <div>
-        <label>id: </label>{{hero.id}}</div>
+        <label>id: </label><div>{{hero.id}}</div>
     <div>
         <label>name: </label>
         <input [(ngModel)]="hero.name" placeholder="name" />
+    </div>
+    <div>
+        <label>rate: </label><div>{{ hero.rate | heroratepipe : 3 | currency }}</div>
     </div>
     <button (click)="goBack()">Back</button>
 </div>
