--- a/Quickstart/app/Templates/dashboard.component.html
+++ b/Quickstart/app/Templates/dashboard.component.html
@@ -1,7 +1,17 @@
-<h3>Top Heroes</h3>
+<h2>Top Heroes</h2>
 
+<h3>Button click method</h3>
 <div class="grid grid-pad">
     <div *ngFor="#hero of heroes" (click)="gotoDetail(hero)" class="col-1-4">
+        <div class="module hero">
+            <h4>{{hero.name}}</h4>
+        </div>
+    </div>
+</div>
+
+<h3>Router method</h3>
+<div class="grid grid-pad">
+    <div *ngFor="#hero of heroes" [routerLink]="['HeroDetail', { id: hero.id }]" class="col-1-4">
         <div class="module hero">
             <h4>{{hero.name}}</h4>
         </div>
