Added a sample of using the built in date pipe

--- a/Quickstart/app/Templates/dashboard.component.html
+++ b/Quickstart/app/Templates/dashboard.component.html
@@ -1,4 +1,7 @@
-<h2>Top Heroes</h2>
+<h1>Top Heroes</h1>
+
+<h3>Due Date (using built in pipes)</h3>
+<div>{{dueDate | date:'yMMMd'}}</div>
 
 <h3>Button click method</h3>
 <div class="grid grid-pad">
